--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  padding: 0;
+  margin: 0;
 }
